style scrollbar + autres corrections

--- a/style.css
+++ b/style.css
@@ -26,10 +26,16 @@ input {
   padding-right:15px;
   padding-left:15px;
   padding-bottom:7px;
-
   position:fixed;
   bottom:0;
   width:100%;
+}
+@media screen and (max-width: 768px) {
+  #input-div {
+    padding-right:5px;
+    padding-left:5px;
+    padding-bottom:5px;
+  }
 }
 #messages {
   list-style-type:none;
@@ -77,7 +83,7 @@ textarea {
   border-bottom:0px !important;
   border-left:0px !important;
 }
-#toast1 {
+#m_start {
   position: absolute;
   top:6rem;
   right:2.5rem;
@@ -96,18 +102,21 @@ textarea {
   padding-right:7px;
   color:#3d3d3d !important;
 }
-.toast-header{
+#m_start div:nth-child(1){
   border:none;
 }
-.toast-body{
+#m_start div:nth-child(2){
   color:#464646;
 }
 hr.style-two {
   border:0;
-  height:0.1px;
   background-image:linear-gradient(to right,#0000001a, #000000b3,#0000001a);
   margin-top:12px;
   margin-bottom:12px;
+  height:1px;
+  width:150px;
+  margin-left:auto !important;
+  margin-right:auto !important;
 }
 #count{
   font-size:13px;
@@ -312,10 +321,10 @@ code{
 
 /* Modale m.aye.html */
 #m_aye{
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  position:absolute;
+  left:50%;
+  top:50%;
+  transform:translate(-50%, -50%);
 }
 #m_aye .modal-content{
   color:#ffffff;
@@ -342,6 +351,42 @@ code{
 }
 .iconAye{
   filter:drop-shadow(3px 3px 2px #0000004d);
+}
+
+/* Scrollbar body */
+*::-webkit-scrollbar { width:15px; }
+*::-webkit-scrollbar-track {
+  background-color:#e9e9e9;
+  border-radius:5px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color:#b2c0cc;
+  border-radius:5px;
+}
+
+/* Scrollbar textarea */
+*::-webkit-scrollbar { width:5px; }
+*::-webkit-scrollbar-track {
+  background-color:#ffffff;
+  border-radius:0px;
+}
+*::-webkit-scrollbar-thumb {
+  background-color:#b2c0cc;
+  border-radius:0px;
+}
+
+/* Scrollbar modale users */
+#users{ margin:0px 7px; }
+#users::-webkit-scrollbar {
+  width:5px;
+}
+#users::-webkit-scrollbar-track {
+  background-color:#ffffff;
+  border-radius:50px;
+}
+#users::-webkit-scrollbar-thumb {
+  background-color:#ebebeb;
+  border-radius:50px;
 }
 
 #loading{
